--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   
   <main>
-    <div><img src="/images/image-qr-code.png" alt="QR code" href="https://www.frontendmentor.io/challenges/qr-code-component-iux_sIO_H"></div>
+    <div><img src="/images/image-qr-code.png" alt="QR code"></div>
     
     <section>
       <p>Improve your front-end skills by building projects</p>
