--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   
   <main>
-    <div><img src="/images/image-qr-code.png" alt="QR code"></div>
+      <img src="/images/image-qr-code.png" alt="QR code">
     
     <section>
       <p>Improve your front-end skills by building projects</p>
